--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
             <goals>
               <goal>shade</goal>
             </goals>
+              <configuration>
+                  <createDependencyReducedPom>false</createDependencyReducedPom>
+                  <outputFile>C:\Users\tahac\Desktop\plugins\plugins\MafanaDatabaseAPI.jar</outputFile>
+              </configuration>
           </execution>
         </executions>
       </plugin>
